--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html>
 
 <head>
-    <title>Socket.IO chat</title>
+    <title>EDChat</title>
     <style>
         body {
             margin: 0;
+            background-color: #343a40;
+            color:#fff;
+            font-size: 18px;
             padding-bottom: 3rem;
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
         }
@@ -26,9 +29,11 @@
         #input {
             border: none;
             padding: 0 1rem;
+            color: #fff;
             flex-grow: 1;
             border-radius: 2rem;
             margin: 0.25rem;
+            background-color: #343a40;
         }
 
         #input:focus {
@@ -36,7 +41,7 @@
         }
 
         #form>button {
-            background: #333;
+            background: #dc3545;
             border: none;
             padding: 0 1rem;
             margin: 0.25rem;
@@ -56,7 +61,7 @@
         }
 
         #messages>li:nth-child(odd) {
-            background: #efefef;
+            background: #343a40;
         }
     </style>
 </head>
@@ -64,7 +69,7 @@
 <body>
     <ul id="messages"></ul>
     <form id="form" action="">
-        <input id="input" autocomplete="off" /><button>Send</button>
+        <input id="input" autocomplete="off" /><button>Gönder</button>
     </form>
 
 
